@@ -1,3 +1,3 @@
-rcsb.utils.io >= 0.56
+rcsb.utils.io >= 0.69
 backports.range; python_version < "3.0"
 jsonschema >= 2.6.0
